# nxe-cedar

./: .gitignore  CHANGELOG.md  config.ngx  nxe_cedar_types.h
.github/workflows/: test.yaml
src/: nxe_cedar_eval.c  nxe_cedar_eval.h  nxe_cedar_expr.c  nxe_cedar_expr.h  nxe_cedar_lexer.c  nxe_cedar_lexer.h  nxe_cedar_parser.c  nxe_cedar_parser.h  nxe_cedar_types.h
tests/: Makefile  nxe_cedar_stub.c  test_runner.c
tests/cases/phase1/: basic_forbid.json  basic_permit.json  default_deny.json  edge_cases.json  entity_typed_attrs.json  expr_edge_cases.json  expression_coverage.json  extended_scope.json  in_operator.json  logical_operators.json  multipart_types.json  multiple_policies.json  negative_integers.json  operator_precedence.json  parse_errors.json  scope_constraints.json  set_equality.json  string_escapes.json  when_unless.json
tests/cases/phase2/: comparison_operators.json  contains_methods.json  has_operator.json  if_then_else.json  like_operator.json
tests/cases/phase3/: ip_is_in_range.json  ip_literal.json  set_contains.json
tests/cases/phase4/: annotation_errors.json  annotations.json  arithmetic.json  bracket_access.json  ip_inspection.json  is_operator.json  nested_attrs.json  record_literals.json  set_is_empty.json
tests/ffi/: Cargo.toml  build.rs  cedar_ffi.h
tests/ffi/src/: lib.rs
tests/ffi/tests/: oracle_test.rs
tests/ngx_compat/: ngx_config.h  ngx_core.h  ngx_stub.c  ngx_stub.h  nxe_cedar_test_wrapper.c  nxe_cedar_test_wrapper.h
