[package]
name = "cedar-ffi-test"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "cedar_ffi"
crate-type = ["staticlib", "rlib"]
doctest = false

[dependencies]
cedar-policy = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
